--- a/3DSecure2AdvancedCustomSDK.html
+++ b/3DSecure2AdvancedCustomSDK.html
@@ -14,17 +14,21 @@
 		expiryYear: <input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
 		expiryMonth: <input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
 		cvc: <input class="formEls" type="text" name="cvc" value="737"></input><br>
-		value: <input class="formEls" type="text" name="value" value="1499"></input><br>
+		value: <input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
 		currency: <input class="formEls" type="text" name="currency" value="EUR"></input><br>
 		reference: <input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
 		<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
 		<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
 	</form>
 	<div>
+		<input type="checkbox" id="frictionlessCheckbox"/>
+		<label for="frictionlessCheckbox">Frictionless</label>
+	</div>
+	<div>
 		<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth">
-		<label for="adyenTokenAuth" style="user-select: none">Adyen Token Auth</label>
+		<label for="adyenTokenAuth">Adyen Token Auth</label>
 		<input id="acquirerAgnosticAuth" type="radio" checked="checked" name="transactionTypeRadio" value="acquirerAgnosticAuth">
-		<label for="acquirerAgnosticAuth" style="user-select: none">Acquirer Agnostic Auth</label>
+		<label for="acquirerAgnosticAuth">Acquirer Agnostic Auth</label>
 	</div>
 
 	<div id="authoriseBtnHolder"></div>
@@ -99,6 +103,11 @@ function submitForm(e) {
 	let url = common.SERVER_URL + "?";
 	let jsonData = {}; // JSON object for logging
 	
+	// handle frictionless checkbox
+	if (document.getElementById("frictionlessCheckbox").checked) {
+		document.getElementById("valueInput").value = 12002;
+	}
+
 	// form encode data and add to jsonData
 	let formEls = $(".formEls");
 	for (let i = 0; i < formEls.length; i++) {
@@ -216,7 +225,7 @@ function acquirerAgnosticAuth(data) {
 	const request = data.request;
 	const response = data.response;
 
-	output("Request from server to Adyen", JSON.stringify(request, null, 4));
+	output("Request from server to Adyen", "https://pal-test.adyen.com/pal/servlet/Payment/v40/retrieve3ds2Result<br><br>" + JSON.stringify(request, null, 4));
 	output("Response from Adyen to server", JSON.stringify(response, null, 4));
 
 	let url = common.SERVER_URL + "?endpoint=threeds2_adv_acquirerAgnosticAuth" + "&eci=";
