--- a/3DSecure2AdvancedCustomSDK.html
+++ b/3DSecure2AdvancedCustomSDK.html
@@ -3,12 +3,13 @@
 <head>
 	<title>3DS 2.0</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"/>
+	<link rel="stylesheet" type="text/css" href="styles/flowchart.css"/>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<div id="reactHolder"></div>
-	<form>
+	<form style="border: 1px black solid; display: inline-block; padding: 15px;">
 		holderName: <input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
 		number: <input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
 		expiryYear: <input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
@@ -19,6 +20,7 @@
 		reference: <input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
 		<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
 		<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
+		<div id="authoriseBtnHolder"></div>
 	</form>
 	<div>
 		<input type="checkbox" id="frictionlessCheckbox"/>
@@ -31,10 +33,13 @@
 		<label for="acquirerAgnosticAuth">Acquirer Agnostic Auth</label>
 	</div>
 
-	<div id="authoriseBtnHolder"></div>
 	<h3>Network activity</h3>
 	<div id="output" style="width: 50%"></div>
-	<div id="sdkContainer" class="hidden" style="border: 1px black solid; display: inline-block"></div>
+	<div id="sdkContainer" class="hidden" style="display: inline-block"></div>
+	
+	<figure>
+		<ul id="flowchart" class="tree"></ul>
+	</figure>
 </body>
 
 </html>
@@ -56,6 +61,32 @@ globals.authoriseButton.innerHTML = "Authorise";
 globals.authoriseButton.disabled = true;
 globals.authoriseButton.classList.add("disabled");
 document.getElementById("authoriseBtnHolder").appendChild(globals.authoriseButton);
+
+// add dynamic flowchart
+let tree = [
+	"Get3dsAvailability", [
+		"Fingerprint Device", [
+			"Frictionless",
+			"Challenge Shopper", [
+				"Challenge Successful", [
+					"Authorise With Token",
+					"Retrieve MPI Data", [
+						"Authorise Via Adyen",
+						"Authorise Elsewhere"
+					],
+				],
+				"Challenge Failed", [
+					"Retry Challenge",
+					"Authorise Unauthenticated"
+				]
+			]
+		]
+	]
+];
+document.getElementById("flowchart").innerHTML = generateTreeHTML(tree);
+
+// pretend we have cached data on the card
+output("Cached 3ds2 data", '"threeDS2Version": "2.1.0"<br>"threeDSMethodURL": "https://pal-test.adyen.com/threeds2simulator/acs/startMethod.shtml"');
 
 // perform fingerprint via SDK on page load
 fingerprintDevice();
@@ -96,6 +127,8 @@ function fingerprintDevice() {
 		console.log("Verification request to SDK failed:");
 		console.log(failedPromiseResponse);
 	});
+
+	highlightNode("FingerprintDevice");
 }
 
 // send form data to server
@@ -179,6 +212,7 @@ function doChallenge() {
 	};
 
 	output("Challenge request to SDK", "SDK.doChallenge<br><br>acsURL: " + globals.acsURL + "<br>iframeConfig: " + JSON.stringify(iframeConfig, null, 4) + "<br>cReqData: " + JSON.stringify(globals.cReqData, null, 4));
+	highlightNode("ChallengeShopper");
 
 	// create the iframe for the promise
 	SDK.doChallenge(globals.acsURL, globals.cReqData, iframeConfig, NOTIFICATION_URL).then(
@@ -206,6 +240,7 @@ function handleSuccessfulSDKChallengePromise(successfulPromiseResponse) {
 // doChallenge failed resolution
 function handleFailedSDKChallengePromise(failedPromiseResponse) {
 	output("Challenge failed", "Challenge failed<br>" + JSON.stringify(failedPromiseResponse, null, 4));
+	highlightNode("ChallengeFailed");
 	console.log(failedPromiseResponse);
 
 	document.getElementById("sdkContainer").classList.add("hidden");
@@ -227,6 +262,7 @@ function acquirerAgnosticAuth(data) {
 
 	output("Request from server to Adyen", "https://pal-test.adyen.com/pal/servlet/Payment/v40/retrieve3ds2Result<br><br>" + JSON.stringify(request, null, 4));
 	output("Response from Adyen to server", JSON.stringify(response, null, 4));
+	highlightNode("RetrieveMPIData");
 
 	let url = common.SERVER_URL + "?endpoint=threeds2_adv_acquirerAgnosticAuth" + "&eci=";
 }
@@ -246,11 +282,39 @@ function adyenTokenAuthCallback(data) {
 
 	output("Request from server to Adyen", "https://pal-test.adyen.com/pal/servlet/Payment/v40/authorise3ds2<br><br>" + JSON.stringify(request, null, 4));
 	output("Response from Adyen to server", JSON.stringify(response, null, 4));
+	highlightNode("AuthoriseWithToken");
 }
 
 //////////////////////////////////
 //			UTILITIES			//
 //////////////////////////////////
+
+// automated tree generator
+function generateTreeHTML(inputObject) {
+	let result = "";
+	for (let child in inputObject) {
+		if (typeof(inputObject[child]) === "object") {
+			// node has children
+			result = result + "<ul>" + generateTreeHTML(inputObject[child]) + "</ul>";
+		}
+		else {
+			// node is a label
+			result = result + "<li><code id=" + inputObject[child].replace(/ /g, "") + ">" + inputObject[child] + "</code>";
+		}
+	}
+	return result;
+}
+
+// highlight active stage in process
+function highlightNode(nodeID) {
+	let activeNodes = document.getElementsByClassName("active-node");
+	console.log(activeNodes.length);
+	for (let i = 0; i < activeNodes.length; i++) {
+		console.log(i);
+		activeNodes[i].classList.remove("active-node");
+	}
+	document.getElementById(nodeID).classList.add("active-node");
+}
 
 // gets state of auth flow radio buttons
 function getSelectedAuthFlow() {
