make index more descriptive

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 	<a class="index-link" href="HMAC.html">HMAC Calculation</a><br>
 
 	<h3 class="index-header">Checkout</h3>
-	<a class="index-link" href="checkout.html">Checkout</a><br>
+	<a class="index-link" href="checkout.html">Checkout SDK</a><br>
 	<a class="index-link" href="SecuredFieldsSDK.html">Secured Fields - SDK</a><br>
 	<a class="index-link" href="SecuredFieldsDirect.html">Secured Fields - Direct</a><br>
 	
-	<h3 class="index-header">Cards</h3>
+	<h3 class="index-header">Classic API</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
-	<a class="index-link" href="3DSecure.html">3D Secure</a><br>
-	<a class="index-link" href="3DSecure2.html">3D Secure 2.0 Basic</a><br>
-	<a class="index-link" href="3DSecure2Advanced.html">3D Secure 2.0 Advanced</a><br>
-	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 Advanced - Custom SDK</a><br>
+
+	<h3 class="index-header">3D Secure</h3>
+	<a class="index-link" href="3DSecure.html">3D Secure 1</a><br>
+	<a class="index-link" href="3DSecure2.html">3D Secure 2.0 - Basic</a><br>
+	<a class="index-link" href="3DSecure2Advanced.html">3D Secure 2.0 - Advanced - Adyen SDK</a><br>
+	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 - Advanced - Custom SDK</a><br>
 </body>
 
 </html>
