--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<a class="index-link" href="checkout.html">Checkout SDK</a><br>
 	<a class="index-link" href="SecuredFieldsSDK.html">Secured Fields - SDK</a><br>
 	<a class="index-link" href="SecuredFieldsDirect.html">Secured Fields - Direct</a><br>
+	<a class="index-link" href="components.html">Components</a><br>
 	
 	<h3 class="index-header">Classic API</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
